fix black text on Safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ a {
 
 @layer components {
   .gbox {
-    @apply flex justify-around flex-col text-center shadow-lg border-2 p-2 sm:p-10 rounded-xl w-11/12 sm:w-full my-5 mx-auto hover:scale-105 hover:bg-slate-900 sm:hover:scale-110 duration-300
+    @apply flex justify-around flex-col text-center shadow-lg border-2 p-2 sm:px-10 rounded-xl w-11/12 sm:w-full my-5 mx-auto hover:scale-105 hover:bg-slate-900 sm:hover:scale-110 duration-300
   }
 }
 
