--- a/styles/home.css
+++ b/styles/home.css
@@ -5,7 +5,7 @@
   width: 100%;
   height: 550px;
   /* background-color: #052a63; */
-  background-image: url("");
+  /* background-image: url(""); */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
